# SimplePlusPlus

./: LICENSE  README.md  example.cpp  simple++.cpp  simple++.h
Simple++/: CMakeLists.txt  README.md  example.cpp  simple++.cpp  simple++.h
